style.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');

* {
  box-sizing: border-box;
}

html, body {
  text-align: center;
  scroll-behavior: smooth;
  font-family: 'Noto Sans', sans-serif;
  font-size: 120%;
  margin: 0;
}

hr {
  width: 95%;
}

.content {
  margin: 0;
  display: flex;
  min-height: 80vh;
  flex-direction: column;
  justify-content: space-between;
}

.underline {
  text-decoration: underline;
}

/*
*
* links CSS
*
*/

.link {
  margin: 0 auto;
  text-decoration: none;
  color: #5477ab;
}

.link:hover {
  text-decoration: underline;
}

/*
*
* navbar CSS
*
*/

.navbar {
  display: flex;
  align-items: top;
  justify-content: space-around;
  position: relative;
  isolation: isolate;
  width: 100%;
  height: 300px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
}

.contact-navbar::before {
  content: "";
  position: absolute;
  inset: 0;
  z-index: -1;
  background: url("media/contactImg.jpg");
  background-size: cover;
  background-position: center;
  opacity: 0.75;
}

.home-navbar::before {
  content: "";
  position: absolute;
  inset: 0;
  z-index: -1;
  background: url("media/homepage_3.jpeg");
  background-size: cover;
  background-position: 0% 55%;
  opacity: 0.75;
}

.members-navbar::before {
  content: "";
  position: absolute;
  inset: 0;
  z-index: -1;
  background: url("media/labPhoto24.jpeg");
  background-size: cover;
  background-position: center;
  opacity: 0.75;
}

.memories-navbar::before {
  content: "";
  position: absolute;
  inset: 0;
  z-index: -1;
  background: url("media/departmentRetreat2.jpg");
  background-size: cover;
  background-position: 0% 60%;
  opacity: 0.75;
}

.research-navbar::before {
  content: "";
  position: absolute;
  inset: 0;
  z-index: -1;
  background: url("media/researchImg.jpg");
  background-size: cover;
  background-position: center;
  opacity: 0.75;
}

.navbar-blur {
  backdrop-filter: blur(6px);
  -webkit-backdrop-filter: blur(6px);
  filter: drop-shadow(5px 5px 10px #000);
  width: 100%;
  opacity: 1;
}

.navbar-container {
  display: flex;
  align-items: center;
  justify-content: space-around;
  flex-wrap: wrap;
  margin: 0;
  gap: 0.5em;
  overflow: hidden;
}

.navbar a {
  text-decoration: none;
  color: #911818;
  padding: 7px;
  margin: 5px;
  display: inline-block;
  transition: 0.3s;
}

.navbar a:hover {
  color: white;
}

@media (max-width: 1000px) {
  .navbar h2 {
    padding-bottom: 0;
  }
}

/*
*
* rework CSS of homepage
*
*/

.homepage-text-container {
  display: flex;
  justify-content: center;
  padding-top: 2%;
  padding-bottom: 2%;
}

.homepage-text {
  text-align: left;
  padding-left: 20%;
  padding-right: 20%;
}

.homepage-text li {
  list-style-type: disc;
}

.homepage-images {
  display: flex;
  align-items: center;
  justify-content: center;
}

.homepage-images img {
  width: 50%;
}

.homepage-gallery {
  width: 50%;
  padding-top: 2%;
  padding-bottom: 2%;
}

.homepage-slides {
  display: flex;
  overflow-x: scroll;
  position: relative;
  scroll-behavior: smooth;
  scroll-snap-type: x mandatory;
  overflow: hidden;
}

.outer-homepage-slide {
  display: flex;
  flex-shrink: 0;
  justify-content: center;
  align-items: center;
  width: 100%;
  transform-origin: center center;
  scroll-snap-align: center;
}

.homepage-slide {
  display: flex;
  justify-content: center;
}

.homepage-prev, .homepage-next {
  display: flex;
  align-items: center;
}

.homepage-next a {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 1em;
  transition: 0.5s;
  height: 30%;
  min-height: 100px;
  border-radius: 0 5px 5px 0;
}

.homepage-prev a {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 1em;
  transition: 0.5s;
  height: 30%;
  min-height: 100px;
  border-radius: 5px 0px 0px 5px;
}

.homepage-prev a:hover, .homepage-next a:hover {
  background: rgb(0, 0, 0, 0.1);
}

@media (max-width: 1080px) {
  .homepage-gallery {
    width: 80%;
  }

  .homepage-images img {
    width: 80%;
  }
}

/* 
*
* rework CSS of lab members webpage
*
*/

.lab-members-rework h2 {
  padding-top: 2em;
}

.member-box-outer-rework {
  display: flex;
  justify-content: center;
  padding-bottom: 2em;
}

.member-box-rework {
  display: flex;
  flex-direction: row;
  justify-content: center;
  width: 80%;
  gap: 0.5em;
}

.reverse-member-image {
  flex-direction: row-reverse;
}

.member-box-rework div {
  padding: 1.5em;
  width: 50%;
}

.member-box-image-rework {
  background: linear-gradient(to bottom left, #ffffff 0%, #e1e3e1 100%);
  box-shadow: 10px -10px #900603;
}

.member-box-image-rework img {
  width: 75%;
  padding-bottom: 5px;
}

.member-box-image-rework .member-box-name-rework {
  margin-bottom: 0;
}

.member-box-image-rework h5 {
  margin: 0;
  font-weight: normal;
}

.member-box-image-rework h6 {
  margin-top: 0;
  font-weight: normal;
  font-style: italic;
}

.member-box-text-rework {
  display: flex;
  align-items: center;
  text-align: left;
}

.past-members-rework {
  text-align: left;
  width: 80%;
  font-size: 70%;
}

.past-members-rework p {
  margin: 0;
  padding-bottom: 0.5em;
}

.member-box-text-rework-responsive {
  display: none;
}

@media (max-width: 1080px) {
  .member-box-rework {
    flex-wrap: wrap;
    width: 100%;
  }
  .member-box-rework div {
    width: 85%;
  }
  .member-box-text-rework {
    display: none;
    text-align: center;
  }
  .member-box-text-rework-responsive {
    display: inline-block;
  }
  .reverse-member-image {
    flex-direction: row;
  }
}

/* 
*
* rework CSS of research webpage
*
*/

.research-rework {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.research-outer-section-rework {
  display: flex;
  flex-direction: row;
  justify-content: center;
  padding-bottom: 2em;
}

.research-inner-section-rework {
  display: flex;
  align-items: center;
  gap: 1em;
  width: 80%;
}

.research-inner-section-rework div {
  padding: 1.5em;
}

.research-text-rework {
  display: flex;
  flex-direction: row;
  text-align: left;
  width: 70%;
}

.research-image-rework {
  background: linear-gradient(to bottom left, #ffffff 0%, #e1e3e1 100%);
  box-shadow: 10px -10px #900603;
  width: 30%;
}

.research-image-rework img {
  width: 75%;
}

.reverse-research-image {
  flex-direction: row-reverse;
}

.research-text-responsive {
  display: none;
}

@media (max-width: 1080px) {
  .research-inner-section-rework {
    flex-wrap: wrap;
    justify-content: center;
    width: 100%;
  }
  .research-inner-section-rework div {
    width: 85%;
  }
  .research-text-rework {
    display: none;
    text-align: center;
  }
  .research-text-responsive {
    display: inline-block;
  }
  .reverse-research-image {
    flex-direction: row;
  }
}

/*
*
* contact webpage CSS
*
*/

li {
  list-style-type: none;
}

.contact {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: left;
  flex-wrap: wrap;
  gap: 10%;
}

@media (max-width: 800px) {
  .contact div {
    width: 80%;
  }
}

/*
*
* Memories webpage CSS
*
*/

.memories {
  position: relative;
}

.outside-memories-nav {
  display: flex;
  justify-content: center;
}

.memories-nav {
  display: flex;
  width: 75%;
}

.memories-nav a {
  text-decoration: none;
  color: #900603;
}

.memories-nav h3 {
  transition: 0.2s ease;
}

.memories-nav h3:hover {
  transform: translateY(-5px);
}

.outside-divider {
  flex: 1;
  padding: 0 10px;
}

.line-divider {
  height: 50%;
  border-bottom: 1px solid #bbb;
}

.memories-header {
  color: #900603;
  font-size: 200%;
  margin-top: 1em;
  margin-bottom: 1em;
}

.memories-header a {
  color: #900603;
  text-decoration: none;
}

.outer-memories-item {
  position: relative;
}

.memories::after {
  content: "";
  position: absolute;
  width: 6px;
  height: 100%;
  background: #900603;
  top: 0;
  left: 50%;
  margin-left: -3px;
  z-index: -1;
}

.memories .left-arrow {
  height: 0;
  width: 0;
  position: absolute;
  top: 20%;
  transform: translateY(-50%);
  z-index: 1;
  border-top: 15px solid transparent;
  border-bottom: 15px solid transparent;
  border-left: 15px solid #900603;
  right: -15px;
}

.memories .right-arrow {
  height: 0;
  width: 0;
  position: absolute;
  top: 20%;
  transform: translateY(-50%);
  z-index: 1;
  border-top: 15px solid transparent;
  border-bottom: 15px solid transparent;
  border-right: 15px solid #900603;
  left: -15px;
}

.memories .indicator {
  position: absolute;
  top: 20%;
  left: 50%;
  transform: translateX(-50%);
}

.memories .indicator::after {
  content: "";
  position: absolute;
  width: 15px;
  height: 15px;
  background: #900603;
  border-radius: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.outer-memories-item {
  display: flex;
  justify-content: center;
  margin-top: 2em;
  margin-bottom: 2em;
}

.memories-item {
  display: flex;
  flex-direction: row;
  justify-content: left;
  width: 80%;
  gap: 0.5em;
}

.reverse-memories-item {
  justify-content: right;
}

.memories-item .image {
  width: 45%;
  position: relative;
  display: inline-block;
}

.memories-item .image img {
  width: 100%;
  height: auto;
  display: block;
}

.memories-item .caption {
  display: block;
  position: absolute;
  margin: auto;
  font-weight: bold;
  font-style: italic;
  font-size: 200%;
  width: 80%;
  max-width: 700px;
  text-align: left;
  color: #900603;
  padding: 10px 0;
  top: 20%;
  left: 175%;
  transform: translate(-50%, -50%);
}

.reverse-memories-item .caption {
  left: -75%;
  transform: translate(-50%, -50%);
}

@keyframes fadeIn {
  from { opacity: 0; }
  to { opacity: 1; }
}

@media (max-width: 1440px) {
  .memories-item .caption {
    font-size: 150%;
  }
}

@media (max-width: 1080px) {
  .memories-item .caption {
    font-size: 125%;
  }
}

@media (max-width: 800px) {
  .memories-header {
    font-size: 150%;
  }

  .outer-memories-item {
    margin-bottom: 3em;
  }

  .memories-item {
    justify-content: right;
  }

  .left-arrow {
    border-left: none !important;
    border-top: 15px solid transparent;
    border-bottom: 15px solid transparent;
    border-right: 15px solid #900603;
    right: 0;
    left: -15px;
  }

  .memories-item .caption {
    font-size: 50%;
    transform: translate(-50%, -50%);
    left: 50%;
    top: calc(100% + 2em);
    text-align: center;
  }
}

/*
.alert {
    margin-bottom: 0;
    text-align: center;
    padding: 8px;
    color: #fff;
    background: #1c1c1c;
    border-color: #000;
    display: block;
}
.alert {
    padding: 15px;
    margin-bottom: 20px;
    border: 1px solid transparent;
    border-radius: 4px;
}
.alert-dismissable .close, .alert-dismissible .close {
    right: 12px;
}
.alert-dismissable .close, .alert-dismissible .close {
    position: relative;
    top: -2px;
    right: -21px;
    color: inherit;
}
button.close {
    -webkit-appearance: none;
    padding: 0;
    cursor: pointer;
    background: 0 0;
    border: 0;
}
.close {
    float: right;
    font-size: 21px;
    font-weight: 700;
    line-height: 1;
    color: #000;
    text-shadow: 0 1px 0 #fff;
    filter: alpha(opacity=20);
    opacity: .2;
    margin-right: 20px;
}
.alert p {
}
.alert p, .alert ul {
    margin-bottom: 0;
}
.alert a {
    color: #00aeef;
}
.alert {
    margin-bottom: 0;
    text-align: center;
    padding: 8px;
    color: #fff;
    background: #1c1c1c;
    border-color: #000;
}
a {
    -webkit-transition: all 250ms cubic-bezier(0.55, 0, 0.1, 1);
    transition: all 250ms cubic-bezier(0.55, 0, 0.1, 1);
}
.alert a:hover, .alert a:focus, .alert a:active {
    text-decoration: none;
    color: inherit;
}
*/

